--- a/style.css
+++ b/style.css
@@ -30,3 +30,27 @@ footer {
 	font-size: 28px;
 	font-weight: 900;
 }
+
+.container {
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.game-container {
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+	height: 50vh;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.player-score-container,
+.computer-score-container {
+	width: 25%;
+	font-size: 76px;
+	font-weight: 900;
+	text-align: center;
+}
